--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>The HTML5 Herald</title>
-    <meta name="description" content="The HTML5 Herald" />
-    <meta name="author" content="SitePoint" />
+    <title>Nexus Memoriae</title>
+    <meta name="description" content="Nexus Memoriae" />
+    <meta name="author" content="catawk" />
 
-    <link rel="stylesheet" href="css/styles.css?v=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
-    <h1>Hello World</h1>
+    <h1>Nexus Memoriae</h1>
   </body>
 </html>
