--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </head>
 
   <body>
-    <h1>Nexus Memoriae</h1>
-    <h3>This is a warm welcome to the world. Hello world, I love you all :)</h2>
+    <div class=main>
+      <h1>Nexus Memoriae</h1>
+      <h3>This is a warm welcome to the world. Hello world, I love you all :)</h2>
+    </div>
   </body>
 </html>
